# working_with_the_database

./: README.md  database_manager.py  filling_data.py  main.py  pyproject.toml  queries.sql  utils.py
src/: database_manager.py  utils.py
