[tool.poetry]
name = "working-with-the-database"
version = "0.1.0"
description = ""
authors = ["Sheen <dan.80956@gmail.com>"]
readme = "README.md"
packages = [{include = "working_with_the_database"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
